<resources>
    <string name="app_name">Teacher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">تسجيل الدخول</string>
    <string name="edit_btn">تعديل</string>
    <string name="delete_btn">مسح</string>
    <string name="toolbar_title">بحث</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="todo">TODO</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="password">كلمة السر</string>
    <string name="enter">تسجيل الدخول</string>
    <string name="splash_text">مركز الإتقان لتحفيظ القرآن</string>
    <string name="back_to_your_dashbaord"> في مركز الاتقان لتحفيظ القران</string>
    <string name="students">الدارسين</string>
    <string name="teacher">الشيوخ</string>
    <string name="review_student">مراجعات الدارسين</string>
    <string name="tasks_students">مهام الدارسين</string>
    <string name="teacherPhoneNumber">0912836780</string>
    <string name="teacherName">Ahmed K Madani</string>
    <string name="teacherAddress">Khartoum - Sudan</string>
    <string name="createdDate">Now</string>
    <string name="add_teacher_name">اسم الشيخ</string>
    <string name="add_teacher_address">السكن</string>
    <string name="add_teacher_phone">الهاتف</string>
    <string name="add_teacher_password">كلمة السر</string>
    <string name="add_teacher">اضافة شيخ</string>
    <string name="eduction_level">مستوى الدراسي</string>
    <string name="student_name">اسم الدارس</string>
    <string name="add_student">اضافة دارس</string>
    <string name="workplace">مكان العمل</string>
    <string name="student_pasword">كلمة السر</string>
    <string name="student_phonenumber">الهاتف</string>
    <string name="pick_teacher">اختر الشيخ :</string>
    <string name="student_address">السكن</string>
    <string name="edit_mission">تعديل المهمة</string>


</resources>