<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createdDate"
            android:gravity="left"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:text="@string/teacherName"
            android:gravity="right"
            android:lines="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />


        <!--            <TextView-->
        <!--                android:id="@+id/textteacherName"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:ellipsize="end"-->
        <!--                android:gravity="right"-->
        <!--                android:text="@string/teacherAddress"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textSize="16sp" />-->


        <TextView
            android:id="@+id/textTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:layout_marginTop="8dp"
            android:text="@string/teacherPhoneNumber"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />


        <!--        <RelativeLayout-->
        <!--            android:id="@+id/icon_container"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical">-->

        <!--            <RelativeLayout-->
        <!--                android:id="@+id/icon_back"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <ImageView-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp"-->
        <!--                    android:src="@drawable/bg_circle" />-->

        <!--                <ImageView-->
        <!--                    android:layout_width="25dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_centerInParent="true"-->
        <!--                    android:src="@drawable/ic_done_white_24dp" />-->
        <!--            </RelativeLayout>-->

        <!--            <RelativeLayout-->
        <!--                android:id="@+id/icon_front"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <ImageView-->
        <!--                    android:id="@+id/icon_profile"-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp" />-->

        <!--                <TextView-->
        <!--                    android:id="@+id/icon_text"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_centerInParent="true"-->
        <!--                    android:textColor="@android:color/white"-->
        <!--                    android:textSize="16sp" />-->
        <!--            </RelativeLayout>-->

        <!--        </RelativeLayout>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>