<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintBottom_toTopOf="@+id/cardView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/bg"
        android:orientation="vertical"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingTop="16dp"
        android:paddingEnd="?listPreferredItemPaddingRight"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:paddingBottom="16sp"
        android:paddingStart="?listPreferredItemPaddingLeft">

        <LinearLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingStart="72dp"
            android:paddingLeft="72dp"
            android:paddingRight="16sp"
            android:paddingEnd="16sp">

            <TextView
                android:id="@+id/textReviewStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:text="@string/teacherName"
                android:gravity="right"
                android:lines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


<!--            <TextView-->
<!--                android:id="@+id/textReviewTeacher"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ellipsize="end"-->
<!--                android:gravity="right"-->
<!--                android:text="@string/teacherAddress"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="16sp" />-->


            <TextView
                android:id="@+id/textReviewDec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/teacherPhoneNumber"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <!--        <RelativeLayout-->
        <!--            android:id="@+id/icon_container"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical">-->

        <!--            <RelativeLayout-->
        <!--                android:id="@+id/icon_back"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <ImageView-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp"-->
        <!--                    android:src="@drawable/bg_circle" />-->

        <!--                <ImageView-->
        <!--                    android:layout_width="25dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_centerInParent="true"-->
        <!--                    android:src="@drawable/ic_done_white_24dp" />-->
        <!--            </RelativeLayout>-->

        <!--            <RelativeLayout-->
        <!--                android:id="@+id/icon_front"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <ImageView-->
        <!--                    android:id="@+id/icon_profile"-->
        <!--                    android:layout_width="40dp"-->
        <!--                    android:layout_height="40dp" />-->

        <!--                <TextView-->
        <!--                    android:id="@+id/icon_text"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_centerInParent="true"-->
        <!--                    android:textColor="@android:color/white"-->
        <!--                    android:textSize="16sp" />-->
        <!--            </RelativeLayout>-->

        <!--        </RelativeLayout>-->

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/createdDate"
            android:gravity="left"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>