<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg">


    <androidx.cardview.widget.CardView
        android:id="@+id/students_cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/lift_on_touch"
        app:layout_constraintEnd_toStartOf="@+id/stud_missions_cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/green"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/students"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/stud_missions_cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginStart="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/lift_on_touch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/students_cardView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="50dp"
        tools:targetApi="lollipop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/green"
            android:orientation="vertical">

            <!--            <ImageView-->
            <!--                android:id="@+id/btn_task"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:elevation="10dp"-->
            <!--                android:src="@drawable/ic_purchasing"-->
            <!--                app:tint="@android:color/white" tools:targetApi="lollipop"-->
            <!--                android:contentDescription="@string/todo" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tasks_students"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/student_review_cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/lift_on_touch"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stud_missions_cardView"
        app:layout_constraintStart_toStartOf="@+id/students_cardView"
        app:layout_constraintTop_toBottomOf="@+id/students_cardView"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:orientation="vertical">

            <!--            <ImageView-->
            <!--                android:id="@+id/btn_review"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:elevation="10dp"-->
            <!--                android:src="@drawable/ic_smartphone"-->
            <!--                app:tint="@android:color/white" tools:targetApi="lollipop"-->
            <!--                android:contentDescription="TODO" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/review_student"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>
